--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "5.8.1",
+  "version": "5.8.2",
   "compatibility": ">=8.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -1319,6 +1319,95 @@
       },
       {
         "title": {
+          "en": "The avg. price becomes lowest before a certain time",
+          "nl": "De gem. prijs wordt het laagst voor een bepaalde tijd"
+        },
+        "titleFormatted": {
+          "en": "The avg. price coming [[hours]]H becomes lowest in the [[period]] hours before [[time]] o'clock",
+          "nl": "De gem. prijs komende [[hours]]U wordt het laagst in de [[period]] uren voor [[time]] uur"
+        },
+        "highlight": true,
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=dap|dapg"
+          },
+          {
+            "type": "number",
+            "name": "hours",
+            "title": {
+              "en": "next hours",
+              "de": "der nächsten Std.",
+              "sv": "nästa H",
+              "it": "prossime h",
+              "no": "neste T",
+              "dk": "næste T",
+              "nl": "komende uren"
+            },
+            "placeholder": {
+              "en": "2-8"
+            },
+            "min": 2,
+            "max": 8,
+            "step": 1
+          },
+          {
+            "type": "number",
+            "name": "period",
+            "title": {
+              "en": "period",
+              "de": "Zeitraum",
+              "sv": "period",
+              "it": "periodo",
+              "no": "periode",
+              "nl": "periode"
+            },
+            "placeholder": {
+              "en": "2 - 23"
+            },
+            "min": 2,
+            "max": 23,
+            "step": 1
+          },
+          {
+            "type": "number",
+            "name": "time",
+            "title": {
+              "en": "time",
+              "de": "Zeit",
+              "sv": "tid",
+              "it": "tempo",
+              "no": "tid",
+              "nl": "tijd"
+            },
+            "placeholder": {
+              "en": "01 - 24"
+            },
+            "min": 1,
+            "max": 24,
+            "step": 1
+          }
+        ],
+        "tokens": [
+          {
+            "name": "meter_price_h0",
+            "title": {
+              "en": "Price now",
+              "de": "Preis aktuell",
+              "sv": "Pris just nu",
+              "it": "Prezzo attuale",
+              "no": "Pris nå",
+              "nl": "Prijs nu"
+            },
+            "type": "number",
+            "example": 27.5
+          }
+        ],
+        "id": "price_lowest_avg_before"
+      },
+      {
+        "title": {
           "en": "The price becomes lowest before a certain time",
           "de": "Preis wird für eine bestimmte Zeit am niedrigsten sein",
           "sv": "Priset blir lägst före en viss tidpunkt",
@@ -2328,6 +2417,80 @@
           }
         ],
         "id": "price_lowest_avg"
+      },
+      {
+        "title": {
+          "en": "The avg. price !{{is|isn't}} lowest before a certain time",
+          "nl": "De gem. prijs !{{is|is niet}} het laagst voor een bepaalde tijd"
+        },
+        "titleFormatted": {
+          "en": "The avg. price coming [[hours]]H !{{is|isn't}} lowest in the [[period]] hours before [[time]] o'clock",
+          "nl": "De gem. prijs komende [[hours]]U !{{is|is niet}} het laagst in de [[period]] uren voor [[time]] uur"
+        },
+        "highlight": true,
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=dap|dapg"
+          },
+          {
+            "type": "number",
+            "name": "hours",
+            "title": {
+              "en": "next hours",
+              "de": "der nächsten Std.",
+              "sv": "nästa H",
+              "it": "prossime h",
+              "no": "neste T",
+              "dk": "næste T",
+              "nl": "komende uren"
+            },
+            "placeholder": {
+              "en": "2-8"
+            },
+            "min": 2,
+            "max": 8,
+            "step": 1
+          },
+          {
+            "type": "number",
+            "name": "period",
+            "title": {
+              "en": "period",
+              "de": "Zeitraum",
+              "sv": "period",
+              "it": "periodo",
+              "no": "periode",
+              "nl": "periode"
+            },
+            "placeholder": {
+              "en": "2 - 23"
+            },
+            "min": 2,
+            "max": 23,
+            "step": 1
+          },
+          {
+            "type": "number",
+            "name": "time",
+            "title": {
+              "en": "time",
+              "de": "Zeit",
+              "sv": "tid",
+              "it": "tempo",
+              "no": "tid",
+              "nl": "tijd"
+            },
+            "placeholder": {
+              "en": "01 - 24"
+            },
+            "min": 1,
+            "max": 24,
+            "step": 1
+          }
+        ],
+        "id": "price_lowest_avg_before"
       },
       {
         "title": {
